# gsystem

./: .gitignore  CMakeLists.txt
src/: g_fs.hpp  gconfig.example.h  gdefines.h  gsystem.c  gsystem.h  queue.c  soul.c  soul.h  watchdogs.cpp
src/StorageDriver/: StorageDriver.cpp  StorageDriver.h  g_fs.hpp
src/StorageDriver/at24cm01/: at24cm01.c  at24cm01.h
src/StorageDriver/w25qxx/: w25qxx.c  w25qxx.h  w25qxx_dma.c
src/autoguard/: g_adc.cpp  g_btn.cpp  g_i2c.cpp  g_isr.cpp  g_power.cpp  g_proc.cpp  g_process.cpp  g_ram.cpp  g_rom.cpp  g_rtc.cpp  g_sys_tick.cpp
src/button/: button.c  button.h
src/clock/: clock.c  clock.h
src/clock/ds1307/: ds1307.c  ds1307.h
src/clock/ds130x/: ds130x.c  ds130x.h
src/device_settings/: SettingsDB.cpp  SettingsDB.h  g_settings.c  g_settings.h  g_settings_updater.cpp
src/drivers/: drivers.h
src/drivers/hal/: g_hal.c  g_hal.h  hal_defs.c  hal_defs.h
src/drivers/nrf/: g_nrf.cpp  g_nrf.h
test/stm32_example/: .cproject  .mxproject  .project  stm32_example.ioc
test/stm32_example/Core/Inc/: gconfig.h  stm32f1xx_hal_conf.h
test/stm32_example/Core/Src/: adc.c  main.cpp  stm32f1xx_it.c  tim.c
